--- a/ProjetoFinal/Base.lproj/Main.storyboard
+++ b/ProjetoFinal/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13E28" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="yQr-XW-A8I">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="yQr-XW-A8I">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--Tutorial View Controller-->
@@ -41,7 +41,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mjs-sf-Md5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-332" y="-1419"/>
+            <point key="canvasLocation" x="-3232" y="-186"/>
         </scene>
         <!--Filho View Controller-->
         <scene sceneID="tP2-fB-Y4l">
@@ -81,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9XM-1U-xVq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="616" y="-1419"/>
+            <point key="canvasLocation" x="-2406" y="-186"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GhY-fp-WCT">
@@ -91,12 +91,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="GLa-x9-CeZ"/>
+                        <segue destination="uT6-X1-YJ1" kind="relationship" relationship="rootViewController" id="FRT-5K-6La"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XMK-kW-q1w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1231" y="-125"/>
+            <point key="canvasLocation" x="-1550" y="-186"/>
         </scene>
         <!--Menu View Controller - Assuntos-->
         <scene sceneID="tne-QT-ifu">
@@ -118,7 +118,100 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-332" y="-125"/>
+            <point key="canvasLocation" x="464" y="-1485"/>
+        </scene>
+        <!--View Controller - Enciclopédia-->
+        <scene sceneID="237-fs-HyQ">
+            <objects>
+                <viewController id="l7v-hr-0yC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="o7N-fn-plz"/>
+                        <viewControllerLayoutGuide type="bottom" id="dZA-yb-Byn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rYQ-Rl-l0y">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Enciclopédia" id="zZV-gv-64b"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YVg-HU-I1R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="464" y="-186"/>
+        </scene>
+        <!--Enciclopedia View Controller-->
+        <scene sceneID="OI6-TM-1cx">
+            <objects>
+                <viewController id="RAx-vr-ip1" customClass="EnciclopediaViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sn4-hH-cDi"/>
+                        <viewControllerLayoutGuide type="bottom" id="jhz-ZW-lWB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Zn6-PG-t65">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rwf-pm-AJi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1432" y="-186"/>
+        </scene>
+        <!--Desafio View Controller-->
+        <scene sceneID="JHO-e0-Eh2">
+            <objects>
+                <viewController id="cL3-ra-kgk" customClass="DesafioViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YDP-TM-gem"/>
+                        <viewControllerLayoutGuide type="bottom" id="jFg-za-oRK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0Q2-bZ-4fJ">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LQl-by-gRK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1432" y="1032"/>
+        </scene>
+        <!--Lista Desafio View Controller - Desafios-->
+        <scene sceneID="86r-1f-ydU">
+            <objects>
+                <viewController id="Laj-yx-eaG" customClass="ListaDesafioViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="y4x-d8-8wZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="tuM-gg-evj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Fpj-Uh-X6B">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Desafios" id="iHi-iQ-lw0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SOL-iF-5NB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="464" y="1032"/>
+        </scene>
+        <!--Livre View Controller - Livre-->
+        <scene sceneID="pvF-xX-eqf">
+            <objects>
+                <viewController id="fMn-6K-qgM" customClass="LivreViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UqR-pR-FBX"/>
+                        <viewControllerLayoutGuide type="bottom" id="wzY-4l-TdR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bhy-AX-sDs">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Livre" id="xl1-aq-jC5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CLW-QE-iOH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="464" y="2241"/>
         </scene>
         <!--Menu Principal View Controller-->
         <scene sceneID="q1e-Dv-nd3">
@@ -131,12 +224,55 @@
                     <view key="view" contentMode="scaleToFill" id="rUx-oB-wx2">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zh1-Nb-TYU">
+                                <rect key="frame" x="328" y="216" width="113" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Conceitos">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="push" id="1hd-Wz-ogZ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Qh-yf-dgl">
+                                <rect key="frame" x="328" y="284" width="113" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Enciclopédia">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="l7v-hr-0yC" kind="push" id="VbD-D7-efk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OGj-ui-aDF">
+                                <rect key="frame" x="328" y="330" width="113" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Desafios">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Laj-yx-eaG" kind="push" id="IYm-DI-mLR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ulY-Jv-kL4">
+                                <rect key="frame" x="328" y="389" width="113" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Livre">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="fMn-6K-qgM" kind="push" id="aqI-NM-3Fp"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="scW-gx-mLE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LW7-7o-K3l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-337" y="1016"/>
+            <point key="canvasLocation" x="-501" y="-186"/>
         </scene>
         <!--Conteudo View Controller-->
         <scene sceneID="5gT-Sf-nHQ">
@@ -196,7 +332,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rwh-5a-MlG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="616" y="-125"/>
+            <point key="canvasLocation" x="1432" y="-1471"/>
         </scene>
         <!--Lista De Exercicios View Controller-->
         <scene sceneID="LLt-O6-lPX">
@@ -284,7 +420,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gnt-AA-DJf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1734" y="-139"/>
+            <point key="canvasLocation" x="2550" y="-1485"/>
         </scene>
         <!--Sub View Conteudo Filho-->
         <scene sceneID="wGG-hT-Pmj">
@@ -320,7 +456,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1De-U9-E6b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="616" y="1137"/>
+            <point key="canvasLocation" x="-501" y="-1485"/>
         </scene>
         <!--Sub View Conteudo-->
         <scene sceneID="9wj-8y-ED1">
@@ -338,7 +474,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="byk-aF-pSr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1744" y="1137"/>
+            <point key="canvasLocation" x="2550" y="-2005"/>
         </scene>
         <!--ExercicioV Iew Contoller - controlador q tem a lista de exercicios-->
         <scene sceneID="dzV-zg-u19">
@@ -374,12 +510,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5sD-gj-Hhq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2943" y="-125"/>
+            <point key="canvasLocation" x="3759" y="-1471"/>
         </scene>
     </scenes>
     <resources>
         <image name="fundo-descricao.png" width="529" height="193"/>
         <image name="icone-exercicio.png" width="100" height="100"/>
+        <image name="icone-iniciar.png" width="300" height="304"/>
         <image name="icone-iniciar.png" width="300" height="304"/>
         <image name="icone-teoria.png" width="100" height="100"/>
         <image name="imagem-teoria.png" width="768" height="350"/>
