--- a/ProjetoFinal/Base.lproj/Main.storyboard
+++ b/ProjetoFinal/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="tHn-97-uZ9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13F34" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="tHn-97-uZ9">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Tutorial View Controller-->
@@ -94,7 +94,7 @@
             </objects>
             <point key="canvasLocation" x="-1550" y="-186"/>
         </scene>
-        <!--Assuntos-->
+        <!--Menu View Controller - Assuntos-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="menu" id="BYZ-38-t0r" customClass="MenuViewController" sceneMemberID="viewController">
@@ -116,7 +116,7 @@
             </objects>
             <point key="canvasLocation" x="464" y="-1485"/>
         </scene>
-        <!--Enciclopédia-->
+        <!--View Controller - Enciclopédia-->
         <scene sceneID="237-fs-HyQ">
             <objects>
                 <viewController id="l7v-hr-0yC" sceneMemberID="viewController">
@@ -221,7 +221,7 @@
             </objects>
             <point key="canvasLocation" x="1432" y="1032"/>
         </scene>
-        <!--Desafios-->
+        <!--Lista Desafio View Controller - Desafios-->
         <scene sceneID="86r-1f-ydU">
             <objects>
                 <viewController storyboardIdentifier="listaDesafio" id="Laj-yx-eaG" customClass="ListaDesafioViewController" sceneMemberID="viewController">
@@ -302,7 +302,7 @@
             </objects>
             <point key="canvasLocation" x="464" y="1032"/>
         </scene>
-        <!--Livre-->
+        <!--Livre View Controller - Livre-->
         <scene sceneID="pvF-xX-eqf">
             <objects>
                 <viewController id="fMn-6K-qgM" customClass="LivreViewController" sceneMemberID="viewController">
@@ -659,7 +659,7 @@
             </objects>
             <point key="canvasLocation" x="2550" y="-2005"/>
         </scene>
-        <!--controlador q tem a lista de exercicios-->
+        <!--ExercicioV Iew Contoller - controlador q tem a lista de exercicios-->
         <scene sceneID="dzV-zg-u19">
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="tQW-Gq-m4D" customClass="ExercicioVIewContoller" sceneMemberID="viewController">
